# EPMarketHub

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
MT5/: COLOQUE_A_BASE_MT5_AQUI.txt
core/: analytics.py  config.py  default_symbols.py  json_store.py  market_snapshot.py  models.py  mt5_connector.py  mt5_worker.py  paths.py  symbol_registry.py  terminal_manager.py  terminal_registry.py  terminal_states.py  worker_manager.py  worker_protocol.py
docs/: ARCHITECTURE.md  BASELINE_AUDIT_0.4.7.md  CODEX_TASKS.md  CURRENT_STATUS.md  KERNEL.md  KERNEL_PROTOCOL.md  MANUAL_TESTS.md  ROADMAP.md
gui/: main_window.py
scripts/: sync_test_copy.ps1
tests/: test_bridge_characterization.py  test_json_store.py  test_mt5_connector.py  test_mt5_worker_events.py  test_symbol_registry.py  test_symbol_resolution.py  test_terminal_manager.py  test_terminal_registry.py  test_terminal_states.py  test_web_app_state.js  test_worker_manager.py  test_worker_protocol.py
user_data/: symbols.json
web/: app.js  index.html  style.css
